--- a/lesson-1-homework/index.html
+++ b/lesson-1-homework/index.html
@@ -3,9 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
+	<script src="Scripts/UI.js" defer></script>
 </head>
 <body>
-	<div> "" </div>
-
+	<div>
+		<label>Fruit: </label>
+		<label for="fruit1"></label><input type="text" id="fruit1" placeholder="" />
+		<button>Submit</button>
+	</div>
 </body>
 </html>
