--- a/lesson-1-homework/index.html
+++ b/lesson-1-homework/index.html
@@ -9,7 +9,23 @@
 	<div>
 		<label>Fruit: </label>
 		<label for="fruit1"></label><input type="text" id="fruit1" placeholder="" />
-		<button>Submit</button>
+		<button id="button1">Submit</button>
+	</div>
+	<br>
+	<div>
+		<label>Fruit: </label>
+		<label>
+			<select name="fruit" id="fruit2" style="width: 153px" required>
+				<option value="" selected></option>
+				<option value="Banana">Banana</option>
+				<option value="Cherry">Cherry</option>
+				<option value="Apple">Apple</option>
+				<option value="Strawberry">Strawberry</option>
+				<option value="Lemon">Lemon</option>
+				<option value="Orange">Orange</option>
+			</select>
+		</label>
+		<button id="button2">Submit</button>
 	</div>
 </body>
 </html>
