--- a/lesson-1-homework/index.html
+++ b/lesson-1-homework/index.html
@@ -10,12 +10,13 @@
 		<label>Fruit: </label>
 		<label for="fruit1"></label><input type="text" id="fruit1" placeholder="" />
 		<button id="button1">Submit</button>
+		<link rel="stylesheet" type="text/css" href="Styles/master.css">
 	</div>
 	<br>
 	<div>
 		<label>Fruit: </label>
 		<label>
-			<select name="fruit" id="fruit2" style="width: 153px" required>
+			<select name="fruit" id="fruit2" required>
 				<option value="" selected></option>
 				<option value="Banana">Banana</option>
 				<option value="Cherry">Cherry</option>
