--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -17,7 +17,24 @@
 	</header>
 	<main>
 		<div class="center">
-			m
+			<div class="news_block">
+				<div class="news_content">
+					<h2><a>震惊！｜美国出兵南极，拟建大型军事基地？！</a></h2>
+				<p class="news_index">
+					<span class="policy">时政</span> <span class="info"><a>央视新闻</a> · <a>1000000000+条评论</a> · 5分钟前</span>
+				</p>
+				</div>
+			</div>
+			<div class="news_block">
+				<img src="./img/hippo.jpeg" class="news_img">
+				<div class="news_content">
+				<h2><a>如果动物没有脖子是怎么样的？</a></h2>
+				<p class="news_index">
+					<span class="animal">萌兽</span> <span class="info"><a>动物世界</a> · <a>232条评论</a> · 53分钟前</span>
+				</p>
+				</div>
+				<div style="clear: both"></div>
+			</div>
 		</div>
 		<div class="left">
 			<img src="./img/tcover.png" id="cover">
