--- a/lesson-2/index.html
+++ b/lesson-2/index.html
@@ -19,14 +19,14 @@
 		<div class="center">
 			<div class="news_block">
 				<div class="news_content">
-					<h2><a>震惊！｜美国出兵南极，拟建大型军事基地？！</a></h2>
+				<h2><a>震惊！｜美国出兵南极，拟建大型军事基地？！</a></h2>
 				<p class="news_index">
 					<span class="policy">时政</span> <span class="info"><a>央视新闻</a> · <a>1000000000+条评论</a> · 5分钟前</span>
 				</p>
 				</div>
 			</div>
 			<div class="news_block">
-				<img src="./img/hippo.jpeg" class="news_img">
+				<img src="./img/hippo.jpeg" class="news_img" alt="hippo">
 				<div class="news_content">
 				<h2><a>如果动物没有脖子是怎么样的？</a></h2>
 				<p class="news_index">
@@ -37,7 +37,7 @@
 			</div>
 		</div>
 		<div class="left">
-			<img src="./img/tcover.png" id="cover">
+			<img src="./img/tcover.png" id="cover" alt="今日头条">
 			<button class="navigation">推荐</button>
 			<button class="navigation">西瓜视频</button>
 			<button class="navigation">热点</button>
@@ -129,7 +129,7 @@
 					<li><a>互联网药品信息服务证书</a></li>
 					<li><a>举报邮箱：fangzhicheng@sjtu.edu.cn</a></li>
 					<li><a>公司名称：北京字节跳动科技有限公司</a></li>
-					<li><img src="./img/gongan.png" id="gongan"><a>京公安网备 11000002002023号</a></li>
+					<li><img src="./img/gongan.png" id="gongan" alt="警"><a>京公安网备 11000002002023号</a></li>
 				</ul>
 			</div>
 		</div>
