--- a/lesson-2/task1-tou_tiao/index.html
+++ b/lesson-2/task1-tou_tiao/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<link type="text/css" rel="stylesheet" href="./Styles/master.css">
+	<link type="text/css" rel="stylesheet" href="Styles/master.css">
 </head>
 <body>
 	<header>
@@ -26,7 +26,7 @@
 				</div>
 			</div>
 			<div class="news_block">
-				<img src="./img/hippo.jpeg" class="news_img" alt="hippo">
+				<img src="img/hippo.jpeg" class="news_img" alt="hippo">
 				<div class="news_content">
 				<h2><a>如果动物没有脖子是怎么样的？</a></h2>
 				<p class="news_index">
@@ -37,7 +37,7 @@
 			</div>
 		</div>
 		<div class="left">
-			<img src="./img/tcover.png" id="cover" alt="今日头条">
+			<img src="img/tcover.png" id="cover" alt="今日头条">
 			<button class="navigation">推荐</button>
 			<button class="navigation">西瓜视频</button>
 			<button class="navigation">热点</button>
@@ -129,7 +129,7 @@
 					<li><a>互联网药品信息服务证书</a></li>
 					<li><a>举报邮箱：fangzhicheng@sjtu.edu.cn</a></li>
 					<li><a>公司名称：北京字节跳动科技有限公司</a></li>
-					<li><img src="./img/gongan.png" id="gongan" alt="警"><a>京公安网备 11000002002023号</a></li>
+					<li><img src="img/gongan.png" id="gongan" alt="警"><a>京公安网备 11000002002023号</a></li>
 				</ul>
 			</div>
 		</div>
